<resources>
    <string name="app_name">Sahadev</string>

    <string name="verifymail">If You Have Registered But Not Verified! <u>Get Verification Mail.</u></string>
    <string name="notverified">Is Already Registered But Not Verified!!! Click Submit To Get Verification Message Once You Verify You Will Able To Login.</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="notreg">Reset Password Works Only If You Have Verified Your Email!! </string>

</resources>
