<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#010101"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="8">

    <TextView
        android:id="@+id/verifyemail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/verifymail"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/notreg"
        android:textColor="@color/white_greyish"
        android:textSize="17sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="@color/white_greyish"
        android:textSize="17sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:hint="@string/email"
        android:padding="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_emailid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email"
            android:gravity="center_vertical"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/white_greyish"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>