<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="#010101"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/sign_in"
        android:orientation="vertical"
        android:padding="2dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:padding="10dp"

            android:text="@string/signUp"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:drawableStart="@mipmap/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/white_greyish"
            android:textColorHint="@color/white_greyish"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/white_greyish" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@mipmap/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white_greyish"
            android:textColorHint="@color/white_greyish"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@mipmap/confirm_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white_greyish"
            android:textColorHint="@color/white_greyish"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white_greyish" />

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/white_greyish"
            android:text="@string/terms_conditions"
            android:textColor="@color/white_greyish"
            android:textColorHint="@color/white_greyish"
            android:textSize="14sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_greyish"
            android:fontFamily="@font/autour_one"
            android:text="@string/signUp"
            android:textColor="@color/white_greyish"
            android:textSize="19sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>